fix(core/menu): overflow behavior and menu scrolling

--- a/packages/core/src/components/menu-item/menu-item.scss
+++ b/packages/core/src/components/menu-item/menu-item.scss
@@ -48,9 +48,7 @@ $menuItemPadding: 0.875rem;
     outline-offset: -1px;
   }
 
-  .tab:not(:last-child) {
-    margin-bottom: $small-space;
-  }
+
 
   .notification {
     display: inline-flex;
